<resources>
    <string name="app_name">iDziennik</string>
    <string name="password">Hasło</string>
    <string name="login">Login</string>
    <string name="idziennik">iDziennik</string>
    <string name="log_in">Zaloguj</string>
    <string name="exam_grades">Sprawdziany</string>
    <string name="test_grades">Kartkówki</string>
    <string name="verbal_grades">Odpowiedzi</string>
    <string name="choose_klass">Wybierz klasę</string>
    <string name="Profil">Mój profil</string>
    <string name="choose_subject">WYbierz przedmiot</string>
    <string name="profile_login">Login</string>
    <string name="profile_password">Password</string>
    <string name="button_change_login">Zmień login</string>
    <string name="button_change_password">Zmień hasło</string>
    <string name="my_grades">Moje oceny</string>
    <string name="choose_subject_tittle">Wybierz przedmiot</string>
    <string name="choose_klass_tittle">Wybierz klasę</string>
    <string name="choose_student_tittle">Wybierz studenta</string>
    <string name="button_add_grade">Dodaj ocenę</string>
    <string name="add_grades">Wstaw ocenę</string>
</resources>
